--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     # 表达式生成 https://crontab.guru/
-    - cron: "*/35 * * * *" 
+      - cron: '0 */3 * * *'
   push:
     paths:
       - 'sources.list'
